--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Discover the ideal wood species for your furniture project through our comprehensive timber selector quiz. Get personalized recommendations based on your project type, budget, and preferences.">
     <style>
         :root {
-            --primary-color: #8B4513;
+            --primary-color: #055902;
             --secondary-color: #D2691E;
             --accent-color: #228B22;
             --text-dark: #2C1810;
