--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         :root {
             --primary-color: #055902;
-            --secondary-color: #D2691E;
-            --accent-color: #228B22;
+            --secondary-color: #c5aa7f;
+            --accent-color: #412e28;
             --text-dark: #2C1810;
             --text-light: #666;
             --background: #FAF7F2;
